# source-cmd-gui

./: README.md  angular.json  package-lock.json  package.json
.github/workflows/: publish.yml
examples/dectalk/: README.md
src/: styles.scss
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lexer.rs  logger.rs  main.rs  python.rs  repository.rs
src-tauri/src/model/: entity.rs  mod.rs  state.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  std.service.spec.ts  std.service.ts
src/app/python-tab/: python-tab.component.html  python-tab.component.scss  python-tab.component.spec.ts  python-tab.component.ts
