[package]
name = "source-cmd-gui"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
source_cmd_parser = { git = "https://github.com/Isaac-Duarte/source_cmd_parser.git" }
tokio = { version = "1.34.0", features = ["full"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
chatgpt_rs = "1.2.3"
ollama-rs = { version = "0.1.2", features = ["stream"] }
meval = "0.2.0"
lazy_static = "1.4.0"
chrono = "0.4.31"
dirs = "5.0.1"
pyo3 = { version = "0.20.0", features = ["auto-initialize", "serde"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
async-trait = "0.1.74"
thiserror = "1.0.50"
tokio-rusqlite = "0.5.0"
regex = "1.10.2"
enigo = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
